--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "start": "webpack-dev-server --hot --mode development"
   },
   "dependencies": {
+    "@amcharts/amcharts4": "4.8.5",
+    "@amcharts/amcharts4-geodata": "4.1.10",
     "axios": "0.19.2",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
@@ -21,21 +23,23 @@
     "react-hot-loader": "^4.12.19",
     "react-input-number": "5.0.18",
     "react-router-dom": "5.1.2",
-    "react-select": "3.0.8",
-    "react-select-country-list": "2.1.2"
+    "react-select": "3.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "@hot-loader/react-dom": "^16.11.0+4.12.16",
+    "@types/d3-geo": "1.11.1",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "5.1.3",
     "@types/react-select": "3.0.10",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
+    "body-parser": "1.19.0",
     "css-loader": "^3.4.2",
+    "express": "4.17.1",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
