--- a/package.json
+++ b/package.json
@@ -44,11 +44,14 @@
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
     "lodash-webpack-plugin": "^0.11.5",
+    "node-sass": "4.13.1",
     "prettier": "^1.19.1",
+    "sass": "1.25.0",
+    "sass-loader": "8.0.2",
     "style-loader": "^1.1.3",
     "typescript": "^3.7.5",
     "url-loader": "^3.0.0",
-    "webpack": "^4.41.5",
+    "webpack": "4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
   }
