--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "5.2.1",
     "react-hot-loader": "^4.12.19",
     "react-router-dom": "5.1.2",
     "react-select": "3.0.8"
@@ -32,6 +33,7 @@
     "@types/d3-geo": "1.11.1",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "@types/react-helmet": "5.0.15",
     "@types/react-router-dom": "5.1.3",
     "@types/react-select": "3.0.10",
     "awesome-typescript-loader": "^5.2.1",
