--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react-helmet": "5.0.15",
     "@types/react-router-dom": "5.1.3",
     "@types/react-select": "3.0.10",
+    "@types/node-sass": "^4.11.0",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
     "body-parser": "1.19.0",
@@ -46,6 +47,7 @@
     "html-webpack-template": "^6.2.0",
     "lodash-webpack-plugin": "^0.11.5",
     "node-sass": "4.13.1",
+    "postcss-loader": "3.0.0",
     "prettier": "^1.19.1",
     "sass": "1.25.0",
     "sass-loader": "8.0.2",
@@ -54,6 +56,8 @@
     "url-loader": "^3.0.0",
     "webpack": "4.41.5",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
+    "webpack-dev-server": "^3.10.1",
+    "css-modules-typescript-loader": "^2.0.1",
+    "ts-loader": "^5.3.3"
   }
 }
